# YOLO-JDT

./: .gitignore  .pre-commit-config.yaml  README.md  YOLO_JDT_Research_Document.md  environment.yml  pyproject.toml  requirements-lock.txt  ruff.toml
datasets/: CHECKSUMS.md  SPLITS.md
plans/: yolo_jdt_overview.md
yolo_jdt/configs/: base.yaml  jde.yaml  tagate.yaml
yolo_jdt/data/: augment.py  mosaic_id.py  tracking_loader.py
yolo_jdt/data/converters/: _common.py  crowdhuman_to_std.py  dance_to_std.py  mot_to_std.py
yolo_jdt/data/datasets/: __init__.py  _base.py  crowdhuman.py  dance.py  mot.py
yolo_jdt/eval/: mot_format.py  trackeval_runner.py
yolo_jdt/losses/: joint_loss.py
yolo_jdt/models/: _scale.py  yolo11.py  yolo_jdt.py
yolo_jdt/models/neck/: panet.py
yolo_jdt/scripts/: check_env.py  eval_coco.py  eval_coco_integrity.py  eval_det.py  export_tagate_onnx.py  infer_tracking.py  infer_tracking_jde.py  infer_tracking_jdt.py  package_run.py  promote_ckpt.py  run_baselines.py  run_jde_resume_stageb.sh  run_jde_stages.sh  run_step3a_overnight.sh  run_step4_post.sh  run_tagate_stageA.sh  sanity_check.py  train.py  train_jde.py  train_tagate.py  viz_attention.py
yolo_jdt/tests/: test_bytetrack_smoke.py  test_cmc.py  test_datasets.py  test_joint_head.py  test_kalman.py  test_matcher.py  test_mosaic_id.py  test_mot_format.py  test_offset.py  test_tagate.py  test_track_lifecycle.py  test_tracking_loader.py  test_yolo11_parity.py
yolo_jdt/tracker/: botsort.py  botsort_reid.py  bytetrack.py  cmc.py  kalman.py  matcher.py  track.py
yolo_jdt/train/: callbacks.py  datamodule.py  jde_datamodule.py  jde_lightning_module.py  jdt_datamodule.py  jdt_lightning_module.py  lightning_module.py
yolo_jdt/weights/: __init__.py  loader.py
(+8 files in other folders)
