[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-jdt"
version = "0.1.0"
description = "Joint Detection-Tracking via Temporal Attention Gate on YOLO11 / YOLO26"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "tris" }]
keywords = ["MOT", "tracking", "detection", "YOLO", "TAGate"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Runtime deps are pinned in requirements-lock.txt for reproducibility.
# This list is the minimal direct-dependency surface.
dependencies = [
    "torch>=2.7",
    "torchvision",
    "pytorch-lightning>=2.2",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "numpy",
    "scipy",
    "opencv-python",
    "pillow",
    "pyyaml",
    "tqdm",
    "wandb",
    "tensorboard",
    "motmetrics",
    "lap",
    "cython_bbox",
    "scikit-learn",
    "onnx",
    "onnxruntime-gpu",
    "onnxsim",
    "einops",
    "rich",
    "matplotlib",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "pre-commit"]

[tool.setuptools.packages.find]
include = ["yolo_jdt*"]
exclude = ["tests*", "third_party*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["yolo_jdt/tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
exclude = ["third_party/", "build/", "dist/"]
